# E-commerce-Operations-Brain

./: .env.example  .gitignore  HLD_LLD.md  README.md  docker-compose.yml  pyproject.toml  run_uvicorn.py  start_mcp_servers.py  tree.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  eval.yml
docker/: Dockerfile.backend  Dockerfile.frontend  grafana-datasources.yml  nginx.conf  prometheus.yml  tempo.yml
ecommerce_brain/: __init__.py  exceptions.py  llm.py  plan.md
ecommerce_brain/agents/: react_agent.py  registry.py
ecommerce_brain/agents/definitions/: coordinator.yaml  inventory_agent.yaml  marketing_agent.yaml  memory_agent.yaml  reflection_agent.yaml  sales_agent.yaml  support_agent.yaml
ecommerce_brain/api/: deps.py  main.py  status_store.py
ecommerce_brain/api/routers/: audio.py  export.py  investigate.py
ecommerce_brain/config/: settings.py
ecommerce_brain/db/: engine.py  models.py  seed.py
ecommerce_brain/graph/: graph.py  state.py
ecommerce_brain/graph/nodes/: action_executor.py  coordinator.py  domain_agents.py  guardrail.py  hitl.py  memory_answer.py  memory_recall.py  memory_writer.py  reflection.py  synthesis.py
ecommerce_brain/graph/routing/: rules_engine.py
ecommerce_brain/guardrails/: prompt_injection.py
ecommerce_brain/mcp_servers/: __init__.py  action_mcp_server.py  inventory_mcp_server.py  marketing_mcp_server.py  sales_mcp_server.py  support_mcp_server.py
ecommerce_brain/memory/: embeddings.py  kadb.py  kedb.py  mem0_integration.py
ecommerce_brain/observability/: safe_metrics.py  setup.py
ecommerce_brain/schemas/: inputs.py  memory.py  outputs.py  routing.py
ecommerce_brain/tools/: __init__.py  action_tools.py  constants.py  inventory_tools.py  marketing_tools.py  mcp_loader.py  registry.py  sales_tools.py  support_tools.py
ecommerce_brain/utils/: llm_output.py  time.py
evaluation/: conftest.py  dataset.py  metrics.py  test_agents.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AgentPanel.jsx  ChatArea.jsx  ChatPanel.jsx  HITLModal.jsx  ReportView.jsx  Sidebar.jsx  TracePanel.jsx
scripts/: check_mcp_ports.py  e2e_tests.py  kill_mcp_ports.py  reset_mem0.py  test_mem0_pipeline.py
tests/: conftest.py  test_db_and_marketing_schema.py  test_guardrails.py  test_integration.py  test_routing.py  test_synthesis.py
